Fix header spacing and Menu Styles

--- a/styles/.styles.css
+++ b/styles/.styles.css
@@ -1470,8 +1470,8 @@ body {
   color: #FFF;
   min-height: 66vh; }
   .header-image__title {
-    font-size: 4rem;
-    line-height: 0.375rem;
+    font-size: 4em;
+    line-height: 0.375em;
     font-weight: bold;
     text-align: center;
     text-transform: uppercase;
@@ -1496,8 +1496,8 @@ body {
   color: #333;
   text-align: center; }
   .search__title {
-    font-size: 2rem;
-    line-height: 0.75rem;
+    font-size: 2em;
+    line-height: 0.75em;
     font-weight: bold; }
   .search__keywords {
     height: 3em; }
